--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="row">
           <div class="col-sm-5 copyright">
             <p>
-              Copyright &copy; <span id="current-year">2024</span> YOUR NAME
+              Copyright &copy; <span id="current-year">2024</span> FIROZ ALAM
             </p>
           </div>
           <div class="col-sm-2 top">
@@ -332,7 +332,7 @@
                 <a href="https://www.facebook.com/firozalam1995/" target="_blank"
                   ><i class="fa fa-facebook" aria-hidden="true"></i
                 ></a>
-              </li>ß
+              </li>
             </ul>
           </div>
         </div>
